# SlicerNGFFZarr

./: CMakeLists.txt
OMEZarr/: CMakeLists.txt  OMEZarr.py
OMEZarr/Resources/UI/: OMEZarr.ui
